[package]
name = "strava-mcp"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Strava MCP Contributors"]
description = "MCP server for Strava API integration"
license = "MIT"

[[bin]]
name = "strava-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.14", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTTP server for OAuth callback
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization and schemas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Browser opening
open = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL encoding
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
