[package]
name = "strava-mcp"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Strava MCP Contributors"]
description = "MCP server for Strava API integration"
license = "MIT"

[[bin]]
name = "strava-mcp"
path = "src/main.rs"

[dependencies]
# Strava API client (with OAuth support)
strava-api = { path = "../strava-api", features = ["oauth"] }

# MCP SDK
rmcp = { version = "0.14", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization and schemas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
